--- a/index.html
+++ b/index.html
@@ -162,24 +162,11 @@
             box-shadow: 0 8px 24px rgba(0, 0, 0, 0.5);
             z-index: 2000;
             margin-top: 0.5rem;
+            scrollbar-width: none; /* Firefox */
         }
 
         .dropdown-content::-webkit-scrollbar {
-            width: 8px;
-        }
-
-        .dropdown-content::-webkit-scrollbar-track {
-            background: rgba(0, 0, 0, 0.3);
-            border-radius: 4px;
-        }
-
-        .dropdown-content::-webkit-scrollbar-thumb {
-            background: rgba(236, 72, 153, 0.5);
-            border-radius: 4px;
-        }
-
-        .dropdown-content::-webkit-scrollbar-thumb:hover {
-            background: rgba(236, 72, 153, 0.7);
+            display: none; /* Chrome, Safari, Edge */
         }
 
         .dropdown:hover .dropdown-content {
@@ -290,6 +277,11 @@
             z-index: 999;
             max-height: calc(100vh - 72px);
             overflow-y: auto;
+            scrollbar-width: none; /* Firefox */
+        }
+
+        .mobile-menu::-webkit-scrollbar {
+            display: none; /* Chrome, Safari, Edge */
         }
 
         .mobile-menu.active {
@@ -409,6 +401,7 @@
             width: 100%;
             max-width: 100vw;
             overflow-x: hidden;
+            overflow-y: visible;
         }
 
         .project-card {
@@ -593,34 +586,40 @@
         }
 
         /* Custom Scrollbar Styling */
-        ::-webkit-scrollbar {
+        html::-webkit-scrollbar,
+        body::-webkit-scrollbar {
             width: 12px;
             height: 12px;
         }
 
-        ::-webkit-scrollbar-track {
+        html::-webkit-scrollbar-track,
+        body::-webkit-scrollbar-track {
             background: rgba(26, 26, 46, 0.8);
             border-radius: 10px;
         }
 
-        ::-webkit-scrollbar-thumb {
+        html::-webkit-scrollbar-thumb,
+        body::-webkit-scrollbar-thumb {
             background: linear-gradient(180deg, #3b82f6, #ec4899);
             border-radius: 10px;
             border: 2px solid rgba(26, 26, 46, 0.8);
             transition: all 0.3s ease;
         }
 
-        ::-webkit-scrollbar-thumb:hover {
+        html::-webkit-scrollbar-thumb:hover,
+        body::-webkit-scrollbar-thumb:hover {
             background: linear-gradient(180deg, #60a5fa, #f472b6);
             box-shadow: 0 0 10px rgba(236, 72, 153, 0.5);
         }
 
-        ::-webkit-scrollbar-corner {
+        html::-webkit-scrollbar-corner,
+        body::-webkit-scrollbar-corner {
             background: rgba(26, 26, 46, 0.8);
         }
 
         /* Firefox Scrollbar */
-        * {
+        html,
+        body {
             scrollbar-width: thin;
             scrollbar-color: #ec4899 rgba(26, 26, 46, 0.8);
         }
