--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
                         <h2 className="text-3xl sm:text-4xl font-bold text-center text-white font-orbitron mb-8">
                             Creations
                         </h2>
-                        <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto" style={{display: 'flex', flexWrap: 'wrap', justifyContent: 'center', overflowY: 'visible', overflowX: 'visible'}}>
+                        <div className="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6 max-w-6xl mx-auto" style={{display: 'flex', flexWrap: 'wrap', justifyContent: 'center'}}>
                              {/* Tempo Hub */}
                             <div className="project-card p-6">
                                 <img
