--- a/index.html
+++ b/index.html
@@ -354,7 +354,6 @@
             overflow: hidden;
             padding-top: 80px;
             width: 100%;
-            max-width: 100vw;
         }
 
         .hero-bg {
@@ -400,8 +399,6 @@
             position: relative;
             width: 100%;
             max-width: 100vw;
-            overflow-x: hidden;
-            overflow-y: visible;
         }
 
         .project-card {
@@ -823,31 +820,27 @@
             useEffect(() => {
                 gsap.registerPlugin(ScrollTrigger);
 
-                // Refresh ScrollTrigger to recalculate positions
-                ScrollTrigger.refresh();
+                // Configure ScrollTrigger for better performance
+                ScrollTrigger.config({
+                    autoRefreshEvents: "visibilitychange,DOMContentLoaded,load"
+                });
 
                 // Hero text and logo animation
                 gsap.from(".hero-content", {
                     opacity: 0,
-                    y: 80,
-                    duration: 1.8,
-                    ease: "power4.out",
-                    delay: 0.3
+                    y: 50,
+                    duration: 1.2,
+                    ease: "power3.out",
+                    delay: 0.2
                 });
 
                 gsap.from(".hero-logo", {
                     opacity: 0,
-                    scale: 0.5,
-                    duration: 1.5,
-                    ease: "elastic.out(1, 0.5)",
-                    delay: 0.5
-                });
-
-                // Clear any existing ScrollTriggers for project cards
-                ScrollTrigger.getAll().forEach(trigger => {
-                    if (trigger.vars.trigger && trigger.vars.trigger.classList && trigger.vars.trigger.classList.contains('project-card')) {
-                        trigger.kill();
-                    }
+                    scale: 0.8,
+                    rotation: -10,
+                    duration: 1,
+                    ease: "back.out(1.4)",
+                    delay: 0.4
                 });
 
                 // Project cards animation with stagger
@@ -855,23 +848,22 @@
                     gsap.fromTo(card, 
                         {
                             opacity: 0,
-                            y: 100,
-                            scale: 0.9
+                            y: 60,
+                            scale: 0.95
                         },
                         {
                             opacity: 1,
                             y: 0,
                             scale: 1,
-                            duration: 1,
-                            ease: "power3.out",
+                            duration: 0.8,
+                            ease: "power2.out",
                             scrollTrigger: {
                                 trigger: card,
-                                start: "top 90%",
-                                end: "top 20%",
-                                toggleActions: "play none none none",
+                                start: "top 85%",
+                                toggleActions: "play none none reverse",
                                 once: false
                             },
-                            delay: (i % 4) * 0.15
+                            delay: (i % 4) * 0.1
                         }
                     );
                 });
